<resources>
    <string name="app_name">Desafio Restaurante</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember-me</string>
    <string name="log_in">LOG IN</string>
    <string name="registrer">REGISTRER</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nome_do_restaurante">Nome do Restaurante</string>
    <string name="nome_do_prato">Nome do prato</string>
    <string name="pratos_principais">Pratos Principais</string>
</resources>
